rearchitectured to clickhouse-cube-metabase

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,12 @@
 # Oracle Database Configuration
-DBT_ORACLE_USER=your_oracle_user
-DBT_ORACLE_PASSWORD=your_oracle_password
-DBT_ORACLE_HOST=your_oracle_host
-DBT_ORACLE_PORT=1521
-DBT_ORACLE_SERVICE=your_oracle_service
-DBT_ORACLE_SCHEMA=your_oracle_schema
+# ORACLE_CONNECTION_STRING="gsowa/gsoracle@sccdrdb1p.dr.softcomputer.com:1521/sd.dr.softcomputer.com"
+ORACLE_CONNECTION_STRING="dummy_user/dummy_password@dummy_host:1521/dummy_service"
+ORACLE_USER=dummy_user
+ORACLE_PASSWORD=dummy_password
+ORACLE_HOST=dummy_host
+ORACLE_PORT=1521
+ORACLE_SERVICE=dummy_service
+ORACLE_SCHEMA=dummy_schema
 
 # Backend Configuration
 JWT_SECRET_KEY=your_secure_jwt_secret_key_change_this_in_production
@@ -13,8 +15,23 @@ CORS_ORIGINS=http://localhost:3000,https://tasking-monitor.example.com
 # LLM Configuration - Ollama
 LLM_PROVIDER=ollama
 OLLAMA_BASE_URL=http://ollama:11434
-OLLAMA_MODEL=llama3
+# OLLAMA_MODEL=llama3:8b-instruct
+# Use q4 quantized versions for better performance
+OLLAMA_MODEL=llama3:8b
 LLM_ENABLED=True
+OLLAMA_HOST_EXTRA_ENV=OLLAMA_ENABLE_METAL=1
 
 # Frontend Configuration
 API_URL=http://localhost:8000/api
+
+# ClickHouse
+CLICKHOUSE_USER=default
+CLICKHOUSE_PASSWORD=
+CLICKHOUSE_DB=support_analytics
+
+# Cube.js
+CUBEJS_API_SECRET=your-cubejs-secret-key
+CUBEJS_DEV_MODE=true
+
+# Network settings
+EXTERNAL_NETWORK_SUBNET=172.20.0.0/16
