oracle synce corrections in Dockerfile

--- a/oracle-sync/Dockerfile
+++ b/oracle-sync/Dockerfile
@@ -1,29 +1,36 @@
 FROM python:3.11-slim
 
-# Install Oracle instant client
-RUN apt-get update && apt-get install -y libaio1 wget unzip \
-    && mkdir -p /opt/oracle \
-    && cd /opt/oracle \
-    && wget https://download.oracle.com/otn_software/linux/instantclient/instantclient-basiclite-linuxx64.zip \
-    && unzip instantclient-basiclite-linuxx64.zip \
-    && rm instantclient-basiclite-linuxx64.zip \
-    && cd /opt/oracle/instantclient* \
-    && ln -s libclntsh.so.19.1 libclntsh.so \
-    && ln -s libocci.so.19.1 libocci.so
+# Install required OS dependencies
+RUN apt-get update && apt-get install -y \
+    libaio1 \
+    wget \
+    unzip \
+    curl \
+    build-essential \
+    python3-dev \
+    && rm -rf /var/lib/apt/lists/*
 
-ENV LD_LIBRARY_PATH=/opt/oracle/instantclient_19_3:$LD_LIBRARY_PATH
-ENV ORACLE_HOME=/opt/oracle/instantclient_19_3
-ENV PATH=$PATH:$ORACLE_HOME
 
+# Download and install Oracle Instant Client
+WORKDIR /opt/oracle
+RUN wget https://download.oracle.com/otn_software/linux/instantclient/1926000/instantclient-basic-linux.x64-19.26.0.0.0dbru.zip && \
+    unzip instantclient-basic-linux.x64-19.26.0.0.0dbru.zip
+
+RUN rm instantclient-basic-linux.x64-19.26.0.0.0dbru.zip
+
+
+# Set Oracle environment variables
+ENV ORACLE_HOME=/opt/oracle/instantclient_19_26
+ENV LD_LIBRARY_PATH=$ORACLE_HOME:$LD_LIBRARY_PATH
+ENV PATH=$ORACLE_HOME:$PATH
 # Set working directory
 WORKDIR /app
 
-# Install uv for dependency management
-RUN pip install uv
 
+# Copy requirements.txt and install dependencies
 # Copy requirements and install dependencies
 COPY requirements.txt .
-RUN uv pip install -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the wait script and make it executable
 COPY wait-for-it.sh .
