--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,8 @@
-version: '3.8'
-
 services:
   clickhouse:
     build:
       context: ./clickhouse
-    image: pipeline1/clickhouse
+    image: champion_robin/clickhouse
     container_name: clickhouse
     env_file:
       - ./.env
@@ -14,12 +12,10 @@ services:
       - "9000:9000"  # Native interface
     volumes:
       - clickhouse_data:/var/lib/clickhouse
-      - ./clickhouse/data:/var/lib/clickhouse/user_files
     ulimits:
       nofile:
         soft: 262144
         hard: 262144
-
     networks:
       - analytics-network
 
@@ -90,4 +86,4 @@ networks:
         - subnet: ${EXTERNAL_NETWORK_SUBNET}
 
 volumes:
-  clickhouse-data:
+  clickhouse_data:
